deployment/sales/k8s-sales-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-db
  template:
    metadata:
      labels:
        app: sales-db
    spec:
      containers:
      - name: sales-db
        image: postgres:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -d
            - $(POSTGRES_DB)
            - -U
            - $(POSTGRES_USER)
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
        - name: sales-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: sales-data
        persistentVolumeClaim:
          claimName: sales-pvc
---
# sales Broker Consumer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-broker-consumer
  labels:
    app: sales-broker-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-broker-consumer
  template:
    metadata:
      labels:
        app: sales-broker-consumer
    spec:
      containers:
      - name: sales-broker-consumer
        image: us-central1-docker.pkg.dev/ccp-perspicapps/ccp-images/sales:latest
        command: ["python", "-u", "start_broker_consumer.py"]
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
# sales API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales-api
  template:
    metadata:
      labels:
        app: sales-api
    spec:
      containers:
      - name: sales-api
        image: us-central1-docker.pkg.dev/ccp-perspicapps/ccp-images/sales:latest
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 8001
        livenessProbe:
          httpGet:
            path: /api/v1/sales/health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 2
