deployment/sales/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sales-db
spec:
  selector:
    app: sales-db
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: sales-api
  annotations:
    cloud.google.com/backend-config: '{"default": "sales-back-config"}'
spec:
  selector:
    app: sales-api
  ports:
  - port: 80
    targetPort: 8001
